nenolod     2006/04/09 20:18:28 UTC	(20060409-5011)
  Log:
  - implement the ability to kill the wumpus:
    it takes 7 hits to kill him as his strength/speed gets divided by two each time:
     60 -> 30 -> 15 -> 7 -> 3 -> 1 -> 0 (0.5, but because speed is an int, it becomes 0).
  

  Changes:	Modified:
  +34 -10	trunk/contrib/wumpus.c (File Modified) 


nenolod     2006/04/09 20:07:59 UTC	(20060409-5009)
  Log:
  - arrow regeneration (via Aerdan)
  

  Changes:	Modified:
  +9 -0		trunk/contrib/wumpus.c (File Modified) 


nenolod     2006/04/09 20:01:50 UTC	(20060409-5007)
  Log:
  - fix logic bug when reporting wumpus kills
  

  Changes:	Modified:
  +5 -4		trunk/contrib/wumpus.c (File Modified) 


nenolod     2006/04/09 19:54:24 UTC	(20060409-5005)
  Log:
  - remove the ability to have tunnels loopback to themselves
  

  Changes:	Modified:
  +5 -0		trunk/contrib/wumpus.c (File Modified) 


nenolod     2006/04/09 19:35:24 UTC	(20060409-5003)
  Log:
  - balance adjustment: change the factor used to place arrows from 2 to 3.
  

  Changes:	Modified:
  +1 -1		trunk/contrib/wumpus.c (File Modified) 


nenolod     2006/04/09 19:33:33 UTC	(20060409-5001)
  Log:
  - balance adjustment: only players who have no arrows can pick up more
  

  Changes:	Modified:
  +9 -4		trunk/contrib/wumpus.c (File Modified) 


nenolod     2006/04/09 19:21:01 UTC	(20060409-4999)
  Log:
  - add crystal ball powerup which exposes the current location of the wumpus
  

  Changes:	Modified:
  +18 -1	trunk/contrib/wumpus.c (File Modified) 


nenolod     2006/04/09 18:39:57 UTC	(20060409-4997)
  Log:
  - take care of a condition where everyone has been killed by the wumpus/fallen into a pit
  

  Changes:	Modified:
  +5 -0		trunk/contrib/wumpus.c (File Modified) 


nenolod     2006/04/09 18:39:02 UTC	(20060409-4995)
  Log:
  - sanity checks keep the segfault away
  

  Changes:	Modified:
  +14 -2	trunk/contrib/wumpus.c (File Modified) 


nenolod     2006/04/09 18:28:56 UTC	(20060409-4993)
  Log: